# goal-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  features.md  pyproject.toml
.github/: LLM_ROUTING.md  llm-routing.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_parent_pupil_link.py  003_report_unique_constraint.py  004_rename_to_go_getter_best_pal.py  005_track_and_group.py  006_goal_group_wizard.py  007_web_research.py
app/: config.py  database.py  main.py
app/auth/: hmac_auth.py
app/bots/: go_getter_bot.py  student_bot.py
app/crud/: __init__.py  achievements.py  base.py  best_pals.py  check_ins.py  go_getters.py  goal_groups.py  parents.py  plans.py  pupils.py  reports.py  targets.py  tasks.py  tracks.py  wizards.py
app/mcp/: auth.py  server.py
app/models/: __init__.py  achievement.py  best_pal.py  check_in.py  go_getter.py  goal_group.py  goal_group_wizard.py  notification.py  parent.py  plan.py  pupil.py  report.py  target.py  task.py  track_category.py  track_subcategory.py  weekly_milestone.py
app/schemas/: __init__.py  achievement.py  best_pal.py  check_in.py  go_getter.py  parent.py  plan.py  pupil.py  report.py  target.py  task.py  wizard.py
app/services/: feasibility_service.py  github_service.py  goal_group_service.py  llm_service.py  notification_service.py  plan_generator.py  praise_engine.py  report_service.py  scheduler_service.py  streak_service.py  telegram_service.py  (+2 more)
docs/: env-setup.md  openclaw-plugin-deployment.md  openclaw-plugin-lessons-learned.md
openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json
scripts/: backup.sh  db_init.sh  deploy.sh  dev.sh  install-openclaw-plugin.sh  lint.sh  migrate.sh  setup.sh  test.sh
systemd/: 99-planner.cnf  goal-agent.service  vocation-planner.service
tests/: conftest.py
(+44 files in other folders)
