[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocation-study-planner"
version = "0.1.0"
description = "AI-powered vacation study planner for families"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "uvicorn[standard]>=0.30",
    "uvloop>=0.21",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "alembic>=1.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "pygithub>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",       # in-memory SQLite for tests (no MariaDB needed)
    "anyio>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
# Pin the Python version used by `uv venv` / `uv sync`
python = "3.12"

[tool.uv.sources]
# (add private index overrides here if needed)

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths  = ["tests"]
addopts    = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # long lines handled by formatter

[tool.ruff.format]
quote-style = "double"
